--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -7,6 +7,10 @@
     <UserSecretsId>aspnet-ProyectoFinal-9DF7EAA2-7531-4DA0-A441-2719671864A3</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="Pages\Registros\Inventario_Articulos.razor" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="3.2.2" />
@@ -20,6 +24,21 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
     <PackageReference Include="Radzen.Blazor" Version="3.17.3" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Registros\Inventario_Articulos.razor" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Registros\Inventario_Articulos.razor" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="Pages\Registros\Inventario_Articulos.razor" />
   </ItemGroup>
               
 </Project>
