--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -24,6 +24,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
     <PackageReference Include="Radzen.Blazor" Version="3.17.3" />
+    <PackageReference Include="Syncfusion.Blazor.DropDowns" Version="20.4.0.54" />
+    <PackageReference Include="Syncfusion.Blazor.Grid" Version="20.4.0.54" />
   </ItemGroup>
 
 
